# GTerm

./: .gitignore  ARCHITECTURE_SUMMARY.md  Cargo.toml  KEYBOARD_EXPLORATION_INDEX.md  KEYBOARD_SHORTCUTS_QUICK_REFERENCE.md  LICENSE  README.md  RELEASE_GUIDE.md  RELEASE_WITH_AUTOUPDATE.md  UPDATE_RELEASE_GUIDE.md  code_reference.md  index.html  keyboard_shortcuts_analysis.md  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  vite.config.js
scripts/: generate-update-manifest.sh  prepare-release.sh  release.sh  sign-package.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: README.md  create-placeholder-icon.sh  icon-placeholder.txt  icon.icns
src-tauri/src/: main.rs
src-tauri/src/local/: connection.rs
src-tauri/src/ssh/: connection.rs  keygen.rs  mod.rs  sftp.rs
src/lib/components/: ConfigurationTab.svelte  ConfirmCloseModal.svelte  ConnectionsTab.svelte  HostManager.svelte  HostSelector.svelte  Modal.svelte  PrivateKeysTab.svelte  SFTP.svelte  Search.svelte  Settings.svelte  ShortcutsManager.svelte  ShortcutsTab.svelte  Sidebar.svelte  SnippetsTab.svelte  SplitPane.svelte  Switch.svelte  Terminal.svelte
src/lib/stores/: hosts.js  privateKeys.js  settings.js  shortcuts.js  snippets.js  tabs.js  theme.js
