[package]
name = "gterm"
version = "1.0.0"
description = "Fast and secure macOS SSH Terminal"
authors = ["GTerm Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
ssh2 = "0.9"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
dirs = "5.0"
keyring = "2.3"
async-trait = "0.1"
futures = "0.3"
chrono = "0.4"
