[package]
name = "gterm"
version = "1.0.34"
description = "Fast and secure macOS SSH Terminal"
authors = ["GTerm Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
dirs = "5.0"
keyring = "2.3"
async-trait = "0.1"
futures = "0.3"
chrono = "0.4"
portable-pty = "0.8"
libc = "0.2"
